@@ -70,7 +70,6 @@
     <property name="test.all.file" value="${test.src.dir}/all-tests"/>
     <property name="test.exclude.file" value="${test.src.dir}/excluded-tests"/>
     <property name="test.output" value="no"/>
-    <property name="test.warehouse.dir" value="/tmp/hcat_junit_warehouse"/>
     <property name="hive.conf.dir" value="${hive.root}/conf"/>
 
     <!-- ivy properteis set here -->
@@ -242,12 +241,9 @@
 
             <delete dir="${test.log.dir}"/>
             <mkdir dir="${test.log.dir}"/>
-            <delete dir="${test.warehouse.dir}"/>
-            <mkdir dir="${test.warehouse.dir}"/>
             <junit showoutput="${test.output}" printsummary="yes" haltonfailure="no"
                    fork="yes" maxmemory="512m" dir="${basedir}" timeout="${test.timeout}"
                    errorProperty="tests.failed" failureProperty="tests.failed">
-                <sysproperty key="hive.metastore.warehouse.dir" value="${test.warehouse.dir}"/>
                 <classpath>
                     <pathelement location="${test.build.classes}" />
                     <pathelement location="." />
